chore: Specify npm registry to publish to

--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "include": ["src"],
     "check-coverage": true
   },
+  "publishConfig": {
+    "registry": "https://npm.phntms.com"
+  },
   "author": "marucci@google.com",
   "license": "ISC",
   "devDependencies": {
