--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "ts-node index.ts",
     "test": "ava",
     "test:watch": "ava --watch",
-    "coverage": "nyc npm run test"
+    "coverage": "nyc npm run test",
+    "prepublish": "rm -rf dist && mkdir dist && cp -r src index.ts package.json *.md dist",
+    "publish": "npm publish dist/"
   },
   "ava": {
     "extensions": [
