--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "@phantom/gerrit-ci",
   "version": "1.0.2",
   "description": "A CI implementation for gerrit projects",
-  "main": "index.ts",
+  "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "start": "ts-node index.ts",
     "test": "ava",
@@ -10,7 +11,7 @@
     "coverage": "nyc npm run test",
     "build": "rm -rf dist && tsc",
     "package": "cp -r package.json *.md dist/",
-    "lib:publish": "npm run build && npm run package && npm publish dist/"
+    "publish-npm": "npm run build && npm run package && npm publish dist/"
   },
   "ava": {
     "extensions": [
