--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@phantom/gerrit-ci",
+  "name": "@phntms/gerrit-ci",
   "version": "1.1.1",
   "description": "A CI implementation for gerrit projects",
   "main": "index.js",
