NPM Publish Script Tweaks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "lib": ["es2018"],
     "strict": true,
     "declaration": true,
-    "outDir": "dist",
+    "outDir": "./lib",
+    "rootDir": "./src",
     "sourceMap": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
