--- a/package.json
+++ b/package.json
@@ -2,16 +2,15 @@
   "name": "@phntms/gerrit-ci",
   "version": "1.1.1",
   "description": "A CI implementation for gerrit projects",
-  "main": "index.js",
-  "types": "index.d.ts",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
     "start": "ts-node index.ts",
     "test": "ava",
     "test:watch": "ava --watch",
     "coverage": "nyc npm run test",
-    "build": "rm -rf dist && tsc",
-    "package": "cp -r package.json *.md dist/",
-    "prepublishOnly": "npm run build && npm run package"
+    "build": "tsc",
+    "prepublishOnly": "npm run build"
   },
   "ava": {
     "extensions": [
