--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,7 +40,6 @@ jobs:
       - run: npm ci
       - run: npm run build
       - run: npm run package
-      - run: cd dist
-      - run: npm publish --access=public
+      - run: cd dist && npm publish --access=public
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
